feat: add author block functionality and global author settings - Introduced a new author block type in the editor with customizable settings for showing published date, modified date, and author name. - Added global author settings in the admin panel to set a fallback author for metadata and author blocks. - Updated the settings page and corresponding language files to reflect changes related to the author block. - Enhanced post routes to resolve author information from various sources, including the new global author setting. - Modified content validation and rendering functions to accommodate the new author block type. - Updated tests to ensure the new author block is included in the add block dropdown.

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -24,6 +24,7 @@
     "optimizations": "Optimierungen",
     "rss": "RSS",
     "data": "Daten",
+    "blog": "Blog",
     "bloglist": "Bloglist",
     "logs": "Logs"
   },
@@ -158,6 +159,10 @@
     "discardConfirm": "Alle nicht gespeicherten Änderungen verwerfen?",
     "saved": "Einstellungen gespeichert",
     "unsavedChanges": "Du hast ungespeicherte Änderungen. Möchtest du die Seite wirklich verlassen?",
+    "blogAuthorSection": "AUTOR",
+    "blogAuthorHint": "Globaler Fallback-Autor für Metadaten und Author-Blöcke",
+    "blogAuthorLabel": "Autor",
+    "blogAuthorPlaceholder": "Max Mustermann",
     "bloglistLimit": "POST LIMIT",
     "bloglistLimitHint": "Maximale Anzahl an Posts in Bloglist-Blöcken",
     "bloglistLimitLabel": "Limit",
@@ -251,6 +256,9 @@
     "noPages": "Noch keine Seiten.",
     "noArchive": "Keine gelöschten Artikel.",
     "createFirst": "Erstelle deine erste {{type}}",
+    "publishedAt": "Veröffentlicht {{date}}",
+    "modifiedAt": "Aktualisiert {{date}}",
+    "byAuthor": "von {{author}}",
     "deleted": "gelöscht",
     "actions": "Aktionen",
     "view": "Ansehen",
@@ -292,6 +300,7 @@
     "blockList": "Liste",
     "blockDivider": "Trenner",
     "blockSpacer": "Abstand",
+    "blockAuthor": "Autor",
     "blockBloglist": "Blogliste",
     "blockSection": "Sektion",
     "blockLayout": "Layout",
@@ -315,8 +324,13 @@
     "sectionAlign": "Ausrichtung",
     "sectionAddBlock": "+ Block hinzufügen",
     "spacerHeight": "Höhe",
+    "authorPlaceholder": "Zeigt Veröffentlichungs-/Änderungsdatum und Autor",
+    "authorShowPublished": "Veröffentlicht",
+    "authorShowModified": "Aktualisiert",
+    "authorShowAuthor": "Autor",
+    "authorTags": "Tags",
     "bloglistPlaceholder": "Blog-Posts werden hier automatisch aufgelistet",
-    "bloglistSettingsLink": "Konfigurieren unter Einstellungen → Bloglist",
+    "bloglistSettingsLink": "Konfigurieren unter Einstellungen → Blog",
     "preview": "Vorschau",
     "bytes": "Bytes",
     "limit": "Limit",
