--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -24,6 +24,7 @@
     "optimizations": "Optimizations",
     "rss": "RSS",
     "data": "Data",
+    "blog": "Blog",
     "bloglist": "Bloglist",
     "logs": "Logs"
   },
@@ -158,6 +159,10 @@
     "discardConfirm": "Discard all unsaved changes?",
     "saved": "Settings saved",
     "unsavedChanges": "You have unsaved changes. Do you really want to leave this page?",
+    "blogAuthorSection": "AUTHOR",
+    "blogAuthorHint": "Global fallback author for metadata and author blocks",
+    "blogAuthorLabel": "Author",
+    "blogAuthorPlaceholder": "John Doe",
     "bloglistLimit": "POST LIMIT",
     "bloglistLimitHint": "Maximum number of posts shown in bloglist blocks",
     "bloglistLimitLabel": "Limit",
@@ -250,6 +255,9 @@
     "noPages": "No pages yet.",
     "noArchive": "No deleted articles.",
     "createFirst": "Create your first {{type}}",
+    "publishedAt": "Published {{date}}",
+    "modifiedAt": "Modified {{date}}",
+    "byAuthor": "by {{author}}",
     "deleted": "deleted",
     "actions": "Actions",
     "view": "View",
@@ -291,6 +299,7 @@
     "blockList": "List",
     "blockDivider": "Divider",
     "blockSpacer": "Spacer",
+    "blockAuthor": "Author",
     "blockBloglist": "Bloglist",
     "blockSection": "Section",
     "blockLayout": "Layout",
@@ -314,8 +323,13 @@
     "sectionAlign": "Align",
     "sectionAddBlock": "+ Add Block",
     "spacerHeight": "Height",
+    "authorPlaceholder": "Shows published/modified/author metadata",
+    "authorShowPublished": "Published",
+    "authorShowModified": "Modified",
+    "authorShowAuthor": "Author",
+    "authorTags": "Tags",
     "bloglistPlaceholder": "Blog posts will be listed here automatically",
-    "bloglistSettingsLink": "Configure in Settings → Bloglist",
+    "bloglistSettingsLink": "Configure in Settings → Blog",
     "preview": "Preview",
     "bytes": "Bytes",
     "limit": "Limit",
